syntax = "proto3";

package services;

option go_package = "./services";

// testing just an integer value for now
message Assignment {
    // message Value {
    //   oneof value {
    //       int32 int32_value   = 1;
    //       string string_value = 2;
    //       float float_value   = 3;
    //       double double_value = 4;
    //       bool bool_value     = 5;
    //   }
    // }
    string variable = 1;
    int32 value = 2;
  }

message Status {
    bool is_success = 1;
    string message = 2;
}

message SessionID {
    string key = 1;
}


// ============ grpc protos for requests and resposnes ============
message GetVariableRequest {
    string variable = 1;
    SessionID sessionID = 2;
}

message GetVariableResponse {
    Assignment assignment = 1;
    Status status = 2;
}

message SetVariableRequest {
    Assignment assignment = 1;
    SessionID sessionID = 2;
}

message SetVariableResponse {
    Status status = 1;
}

message CreateSessionRequest {
    Status status = 1;
}

message CreateSessionResponse {
    SessionID sessionID = 1;
}

message CommitSessionRequest {
    SessionID sessionID = 1;
}

message CommitSessionResponse {
    Status status = 1;
}
// ================================================================


// Public-facing interface for DBMS wrapper (ORM)
service SoftwareTransactionalMemoryService {
    rpc GetVariable(GetVariableRequest) returns (GetVariableResponse);
    rpc SetVariable(SetVariableRequest) returns (SetVariableResponse);
    rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
    rpc CommitSession(CommitSessionRequest) returns (CommitSessionResponse);
}
